@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.950 2008-11-03 17:55:17 castaglia Exp $
+$Id: NEWS,v 1.951 2008-11-06 21:47:17 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -25,6 +25,7 @@ CVS
   permit atomic renames.
 - Bug 2767 - gcc 4.0/amd64 warnings.
 - Bug 3126 - Segfault in mod_sql_sqlite when user belongs to multiple groups.
+- Bug 3130 - HideFiles can cause segfault.
 
 1.3.2rc2 - Released 17-Sep-2008
 --------------------------------
